<resources>
    <string name="app_name">WPMA 5.1</string>
    <string name="actionText">Отсканируте бейджик...</string>
    <string name="resText">Ожидание авторизации</string>
    <string name="choiseWorkLbl">Выбор работы</string>
    <string name="choiseWorkLb2">Выберите режим работы</string>
    <string name="choiseWork">0 - Отбор\n1 - Приемка ***\n2 - Разнос\n3 - Отгрузка\n4 - Инвентаризация\n5 - Сверка товара\n6 - Отбразцы ***\n7 - Подпитка\n8 - Контроль\n9 - Гармонь</string>
    <string name="stdNumVersText">200</string>
    <string name="BarcodeData">Данные о штрих-коде</string>


    <string name="curr">ID</string>
</resources>
